--- a/front-end/miniweb.css
+++ b/front-end/miniweb.css
@@ -131,4 +131,13 @@
     input {
         margin-right: 10px;
     } 
+    #loading {
+        position: absolute;
+        top: 300px;
+        left: 0px;
+        height: 600px;
+        width: 100%;
+        opacity: 0.4;
+        background-color: aqua;
+    }
      
