--- a/front-end/miniweb.css
+++ b/front-end/miniweb.css
@@ -139,5 +139,10 @@
         width: 100%;
         opacity: 0.4;
         background-color: aqua;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: black;
+        
     }
      
